--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -30,6 +29,7 @@
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
   }
 }
